--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,16 +60,25 @@
 #           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
 #           -Dsonar.scm.provider=git
 #           -Dsonar.java.binaries=/tmp
-on: push
+on:
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request. 
+  push:
+    branches:
+      - master
+  pull_request:
+      types: [opened, synchronize, reopened]
 name: Main Workflow
 jobs:
-  sonarQubeTrigger:
-    name: SonarQube Trigger
+  sonarcloud:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@master
+    - uses: actions/checkout@v2
       with:
-        host: ${{ secrets.SONARQUBE_HOST }}
-        login: ${{ secrets.SONARQUBE_TOKEN }}
+        # Disabling shallow clone is recommended for improving relevancy of reporting
+        fetch-depth: 0
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
